--- a/angular4/code/src/app/movimiento/movimiento-new/movimiento-new.component.html
+++ b/angular4/code/src/app/movimiento/movimiento-new/movimiento-new.component.html
@@ -75,6 +75,12 @@
         <input type="text" class="form-control" id="tipo_movimiento" placeholder="Tipo_movimiento Movimiento" [(ngModel)]="movimiento.tipo_movimiento" name="tipo_movimiento">
       </div>
     </div>
+    <div class="form-group">
+      <label for="apropiacion" class="col-sm-2 control-label">Apropiacion </label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="apropiacion" placeholder="Apropiacion Movimiento" [(ngModel)]="movimiento.apropiacion" name="apropiacion">
+      </div>
+    </div>
 
     <!------------------------------------------------>
       <div class="form-group">
