--- a/angular4/code/src/app/movimiento/movimiento-view/movimiento-view.component.html
+++ b/angular4/code/src/app/movimiento/movimiento-view/movimiento-view.component.html
@@ -18,6 +18,7 @@
   <p-column field="apropiacion_origen" header="Apropiacion_origen" [sortable]="true"></p-column>
   <p-column field="valor" header="Valor" [sortable]="true"></p-column>
   <p-column field="tipo_movimiento" header="Tipo_movimiento" [sortable]="true"></p-column>
+  <p-column field="apropiacion" header="Apropiacion" [sortable]="true"></p-column>
 <p-column field="" header="Acciones">
     <ng-template let-col let-registro="rowData" pTemplate="body">
       <button pButton icon="fa-close" type="button" (click)="borrar(registro)"></button>
