--- a/angular4/code/src/app/rubro/rubro-edit/rubro-edit.component.html
+++ b/angular4/code/src/app/rubro/rubro-edit/rubro-edit.component.html
@@ -40,9 +40,9 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="apropiaciones" class="col-sm-2 control-label">Apropiaciones </label>
+      <label for="hijos" class="col-sm-2 control-label">Hijos </label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="apropiaciones" placeholder="Apropiaciones Rubro" [(ngModel)]="rubro.apropiaciones" name="apropiaciones">
+        <input type="text" class="form-control" id="hijos" placeholder="Hijos Rubro" [(ngModel)]="rubro.hijos" name="hijos">
       </div>
     </div>
 
