Agregando modelos y controllers a OrdenPago
* Se corrigen problemas en routers por el nombre de los controladores

--- a/angular4/code/src/app/movimiento/movimiento-edit/movimiento-edit.component.html
+++ b/angular4/code/src/app/movimiento/movimiento-edit/movimiento-edit.component.html
@@ -52,15 +52,15 @@
       </div>
     </div>
     <div class="form-group">
-      <label for="apropiacion_destino" class="col-sm-2 control-label">Apropiacion_destino </label>
+      <label for="rubro_origen" class="col-sm-2 control-label">Rubro_origen </label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="apropiacion_destino" placeholder="Apropiacion_destino Movimiento" [(ngModel)]="movimiento.apropiacion_destino" name="apropiacion_destino">
+        <input type="text" class="form-control" id="rubro_origen" placeholder="Rubro_origen Movimiento" [(ngModel)]="movimiento.rubro_origen" name="rubro_origen">
       </div>
     </div>
     <div class="form-group">
-      <label for="apropiacion_origen" class="col-sm-2 control-label">Apropiacion_origen </label>
+      <label for="rubro_destino" class="col-sm-2 control-label">Rubro_destino </label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="apropiacion_origen" placeholder="Apropiacion_origen Movimiento" [(ngModel)]="movimiento.apropiacion_origen" name="apropiacion_origen">
+        <input type="text" class="form-control" id="rubro_destino" placeholder="Rubro_destino Movimiento" [(ngModel)]="movimiento.rubro_destino" name="rubro_destino">
       </div>
     </div>
     <div class="form-group">
