--- a/angular4/code/src/app/movimiento/movimiento-view/movimiento-view.component.html
+++ b/angular4/code/src/app/movimiento/movimiento-view/movimiento-view.component.html
@@ -14,8 +14,8 @@
   <p-column field="fecha_oficio" header="Fecha_oficio" [sortable]="true"></p-column>
   <p-column field="descripcion" header="Descripcion" [sortable]="true"></p-column>
   <p-column field="unidad_ejecutora" header="Unidad_ejecutora" [sortable]="true"></p-column>
-  <p-column field="apropiacion_destino" header="Apropiacion_destino" [sortable]="true"></p-column>
-  <p-column field="apropiacion_origen" header="Apropiacion_origen" [sortable]="true"></p-column>
+  <p-column field="rubro_origen" header="Rubro_origen" [sortable]="true"></p-column>
+  <p-column field="rubro_destino" header="Rubro_destino" [sortable]="true"></p-column>
   <p-column field="valor" header="Valor" [sortable]="true"></p-column>
   <p-column field="tipo_movimiento" header="Tipo_movimiento" [sortable]="true"></p-column>
   <p-column field="apropiacion" header="Apropiacion" [sortable]="true"></p-column>
