--- a/angular4/code/src/app/registropresupuestal/registropresupuestal-edit/registropresupuestal-edit.component.html
+++ b/angular4/code/src/app/registropresupuestal/registropresupuestal-edit/registropresupuestal-edit.component.html
@@ -10,15 +10,39 @@
     <form class="form-horizontal">
     <!------------------------------------------------>
     <div class="form-group">
-      <label for="disponibilidad_apropiacion" class="col-sm-2 control-label">Disponibilidad_apropiacion </label>
+      <label for="vigencia" class="col-sm-2 control-label">Vigencia </label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="disponibilidad_apropiacion" placeholder="Disponibilidad_apropiacion Registropresupuestal" [(ngModel)]="registropresupuestal.disponibilidad_apropiacion" name="disponibilidad_apropiacion">
+        <input type="text" class="form-control" id="vigencia" placeholder="Vigencia Registropresupuestal" [(ngModel)]="registropresupuestal.vigencia" name="vigencia">
       </div>
     </div>
     <div class="form-group">
-      <label for="valor" class="col-sm-2 control-label">Valor </label>
+      <label for="fecha_registro" class="col-sm-2 control-label">Fecha_registro </label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="valor" placeholder="Valor Registropresupuestal" [(ngModel)]="registropresupuestal.valor" name="valor">
+        <input type="text" class="form-control" id="fecha_registro" placeholder="Fecha_registro Registropresupuestal" [(ngModel)]="registropresupuestal.fecha_registro" name="fecha_registro">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="estado" class="col-sm-2 control-label">Estado </label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="estado" placeholder="Estado Registropresupuestal" [(ngModel)]="registropresupuestal.estado" name="estado">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="numero_registro_presupuestal" class="col-sm-2 control-label">Numero_registro_presupuestal </label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="numero_registro_presupuestal" placeholder="Numero_registro_presupuestal Registropresupuestal" [(ngModel)]="registropresupuestal.numero_registro_presupuestal" name="numero_registro_presupuestal">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="solicitud" class="col-sm-2 control-label">Solicitud </label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="solicitud" placeholder="Solicitud Registropresupuestal" [(ngModel)]="registropresupuestal.solicitud" name="solicitud">
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="disponibilidad_apropiacion" class="col-sm-2 control-label">Disponibilidad_apropiacion </label>
+      <div class="col-sm-10">
+        <input type="text" class="form-control" id="disponibilidad_apropiacion" placeholder="Disponibilidad_apropiacion Registropresupuestal" [(ngModel)]="registropresupuestal.disponibilidad_apropiacion" name="disponibilidad_apropiacion">
       </div>
     </div>
 
