--- a/angular4/code/src/app/registropresupuestal/registropresupuestal-view/registropresupuestal-view.component.html
+++ b/angular4/code/src/app/registropresupuestal/registropresupuestal-view/registropresupuestal-view.component.html
@@ -7,8 +7,12 @@
   </p-footer>
 </p-confirmDialog>
 <p-dataTable [value]="registropresupuestals">
+  <p-column field="vigencia" header="Vigencia" [sortable]="true"></p-column>
+  <p-column field="fecha_registro" header="Fecha_registro" [sortable]="true"></p-column>
+  <p-column field="estado" header="Estado" [sortable]="true"></p-column>
+  <p-column field="numero_registro_presupuestal" header="Numero_registro_presupuestal" [sortable]="true"></p-column>
+  <p-column field="solicitud" header="Solicitud" [sortable]="true"></p-column>
   <p-column field="disponibilidad_apropiacion" header="Disponibilidad_apropiacion" [sortable]="true"></p-column>
-  <p-column field="valor" header="Valor" [sortable]="true"></p-column>
 <p-column field="" header="Acciones">
     <ng-template let-col let-registro="rowData" pTemplate="body">
       <button pButton icon="fa-close" type="button" (click)="borrar(registro)"></button>
